# align-press

./: .gitignore  CHANGELOG.md  ConfiguracionInicialDelantera.yml  DEBUGGING_UX_MEJORADO.md  DEVELOPMENT_SETUP_SUMMARY.md  PHASE2_EXTRACT_CLASS_SUMMARY.md  PHASE4_LEGACY_CLEANUP_SUMMARY.md  README.md  README_legacy_backup.md  REFACTORING_SUMMARY.md  REGRESSION_FIXES_SUMMARY.md  calibracion_nueva.json  code_analysis.py  configanagrande.yml  debug_preset_loading.py  design_workflow_plan.md  dev_tools_launcher.py  documentation_analysis.py  example_camisola_workflow.py  final_ux_report.py  pyproject.toml  requirements-v2.txt  requirements.txt  run_alignpress_v2.py  run_calibration_tool.py  setup_env.py  test_config_designer_improvements.py  test_config_designer_ux.py  test_final_fixes.py  test_grid_fixes.py  test_preset_fix.py  test_preset_save_load.py  test_rulers_debug.py  test_rulers_visibility.py  test_simplified_rulers.py  test_ui_integration.py  ux_analysis_report_20250926_133654.json  validate_v2_architecture.py
alignpress.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
alignpress_v2/: __init__.py
calibrations/: README.txt  chessboard_7x5_25mm.json
config/: alignpress_v2.json  app.yaml  cremascorinta.yaml  temp_validation.json
examples/: calibration_example.md  config_designer_example.md  detection_simulator_example.md
platens/: default_platen.json  platen_1758820366.json
presets/: example_tshirt.json
scripts/: calibrate_from_image.py  main.py  process_dataset.py  run_ui.py  run_ui_v2.py
styles/: example_style.json
tests/: conftest.py  test_detection.py  (+4 more)
(+141 files in other folders)
