[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alignpress"
version = "0.1.0"
description = "AlignPress - Vision-guided alignment system for textile printing"
authors = [
    {name = "Mauro", email = "mauro@example.com"}
]
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "opencv-contrib-python>=4.8",
    "pyyaml>=6.0",
    "PySide6>=6.7",
    "pytest>=7.4"
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["alignpress*"]